# cop4534-p4

./: Bin.cpp  Bin.hpp  Bins.cpp  Bins.hpp  CMakeLists.txt  FileParser.cpp  FileParser.hpp  Item.cpp  Item.hpp  Makefile  OfflinePacker.cpp  OfflinePacker.hpp  OnlinePacker.cpp  OnlinePacker.hpp  OptimalPacker.cpp  OptimalPacker.hpp  PermutationGenerator.cpp  PermutationGenerator.hpp  items.txt  main.cpp
Google_Tests/: CMakeLists.txt  testBins.cpp  testMain.cpp  testParser.cpp
